cc.creativecomputing/log/Christian-Riekoffs-MacBook-Pro.local-2011-05-27_09-54-21.txt
[Fri May 27 09:54:21 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/Christian-Riekoffs-MacBook-Pro.local-2011-05-27_09-54-21.txt
[Fri May 27 09:54:21 CEST 2011] [CCApp:display] [SEVERE] com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:168:25: error: unexpected type name '__int2': expected expression
         if(Pf0.x > Pf0.y) o1 = int2(1, 0);  // +x, +y traversal order
                                ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:150:16: note: instantiated from:
 #define int2                    __int2
                                 ^
<program source>:169:12: error: unexpected type name '__int2': expected expression
         else o1 = int2(0, 1);               // +y, +x traversal order
                   ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:150:16: note: instantiated from:
 #define int2                    __int2
                                 ^
<program source>:182:21:{182:23-182:25}{182:17-182:20}: error: can't convert between vector values of different size ('__int2' and '__float2')
         float2 Pf1 = Pf0 - o1 + G2;
                      ~~~ ^ ~~
<program source>:193:22: error: unexpected type name '__float2': expected expression
   float2 Pf2 = Pf0 - float2(1.0-2.0*G2);
                      ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:170:18: note: instantiated from:
 #define float2                  __float2
                                 ^
CLDevice [id: 16909312 name: Intel(R) Core(TM)2 Duo CPU     T8300  @ 2.40GHz type: CPU profile: FULL_PROFILE] build log:
<program source>:168:25: error: unexpected type name '__int2': expected expression
         if(Pf0.x > Pf0.y) o1 = int2(1, 0);  // +x, +y traversal order
                                ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:150:16: note: instantiated from:
 #define int2                    __int2
                                 ^
<program source>:169:12: error: unexpected type name '__int2': expected expression
         else o1 = int2(0, 1);               // +y, +x traversal order
                   ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:150:16: note: instantiated from:
 #define int2                    __int2
                                 ^
<program source>:182:21:{182:23-182:25}{182:17-182:20}: error: can't convert between vector values of different size ('__int2' and '__float2')
         float2 Pf1 = Pf0 - o1 + G2;
                      ~~~ ^ ~~
<program source>:193:22: error: unexpected type name '__float2': expected expression
   float2 Pf2 = Pf0 - float2(1.0-2.0*G2);
                      ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:170:18: note: instantiated from:
 #define float2                  __float2
                                 ^ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:187)
	at cc.creativecomputing.opencl.demos.noise.CCCLNoiseImageDemo.setup(CCCLNoiseImageDemo.java:116)
	at cc.creativecomputing.CCApp.display(CCApp.java:562)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)

